--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "Phissy-nose-backend",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
