--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-graphql": "^0.9.0",
     "express-validator": "^6.3.1",
     "graphql": "^14.5.8",
