--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app.js",
     "nodemon": "nodemon app.js"
   },
- "keywords": [
+  "keywords": [
     "heroku"
   ],
   "repository": {
@@ -34,6 +34,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.7.7",
     "multer": "^1.4.2",
+    "socket.io": "^2.3.0",
     "validator": "^12.1.0"
   },
   "devDependencies": {
