--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "cloudinary": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-graphql": "^0.9.0",
