--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": "10.x"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.5.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.19.0",
@@ -35,6 +36,8 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.7.7",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.4",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "socket.io": "^2.3.0",
     "validator": "^12.1.0"
   },
